--- a/app/index.html
+++ b/app/index.html
@@ -99,8 +99,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <paper-icon-button id="paperToggle" icon="menu" paper-drawer-toggle></paper-icon-button>
           <span class="flex"></span>
 
-          <!-- Toolbar icons -->
-          <paper-icon-button icon="search"></paper-icon-button>
+          <!-- Toolbar Seach Input -->
+          <search-box></search-box>
 
           <!-- Application name -->
           <div class="middle middle-container center horizontal layout">
