--- a/app/elements/app-login/app-login.html
+++ b/app/elements/app-login/app-login.html
@@ -45,7 +45,7 @@
           value: function () {
             return {};
           },
-          notify: true,
+          notify: true
         },
         statusKnown: Boolean
       },
