--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -42,3 +42,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="add-question/add-question.html">
 <link rel="import" href="app-login/app-login.html">
 <link rel="import" href="search-box/search-box.html">
+<link rel="import" href="questions-view/questions-view.html">
+<link rel="import" href="questions-data/questions-data.html">
+<link rel="import" href="user-profile/user-profile.html">
